--- a/chart/src/services/chart_register.go.org
+++ b/chart/src/services/chart_register.go.org
@@ -1,6 +1,8 @@
 package services
 
-import "log"
+import (
+
+)
 
 // Recipe はレシピ情報を表します
 type Recipes struct {
@@ -36,9 +38,9 @@ type Tejun struct {
 
 // RecipeCollection はレシピとタスクのコレクションを表します
 type RecipeCollection struct {
-	Recipes   []ShortRecipe `json:"recipies"`  // レシピのリスト
-	Tasks     []Task        `json:"tasks"`     // タスクのリスト
-	TotalTime int           `json:"totaltime"` // 累計時間
+	Recipes []ShortRecipe `json:"recipies"` // レシピのリスト
+	Tasks   []Task        `json:"tasks"`    // タスクのリスト
+	TotalTime int         `json:"totaltime"` // 累計時間
 }
 
 // ShortRecipe は簡略化されたレシピ情報を表します
@@ -62,24 +64,16 @@ type TaskDivide struct {
 // chart_Register はレシピからタスクを生成するメソッド
 func chart_Register(recipes []Recipe) (RecipeCollection, error) {
 	// レシピを簡略化した形式に変換
-	simple_recipes, err := chart_Extraction(recipes)
+	simple_recipe, err := chart_Extraction(recipes)
 	if err != nil {
 		return RecipeCollection{}, err
 	}
 
 	// 優先度を決定するメソッド
-	prioritys_recepi, err := chart_Priority(simple_recipes)
+	prioritys_recepi, err := chart_Priority(simple_recipe)
 	if err != nil {
 		return RecipeCollection{}, err
 	}
-
-	simple_recipe, err := chart_prioritys_recepi(simple_recipes, prioritys_recepi)
-
-	if err != nil {
-		return RecipeCollection{}, err
-	}
-	
-	log.Println(simple_recipe)
 
 	tasks := []Task{}
 
@@ -97,7 +91,7 @@ func chart_Register(recipes []Recipe) (RecipeCollection, error) {
 	max_times := 0
 
 	//最初のタスクのだけtrue
-	first_task := true
+	frist_task := true
 	for {
 		// タスクの横列を一つ生成
 		task_frame := []Task{
@@ -105,13 +99,11 @@ func chart_Register(recipes []Recipe) (RecipeCollection, error) {
 				Tejuns: make(map[string]Tejun), // 手順情報のマップを初期化
 			},
 		}
-
 		// 優先度に基づいてタスクを生成
-		task, locations, max_time, first, err := chart_CreateTask(simple_recipe, prioritys_recepi, recipe_nums, task_frame, location, max_times, first_task) // Task型を取得
+		task, locations, max_time, err := chart_CreateTask(simple_recipe, prioritys_recepi, recipe_nums, task_frame, location, max_times, frist_task) // Task型を取得
 		if err != nil {
 			return RecipeCollection{}, err
 		}
-		first_task = first
 		max_times += max_time
 		tasks = append(task, tasks...) // タスクを追加
 		location = locations
@@ -121,11 +113,13 @@ func chart_Register(recipes []Recipe) (RecipeCollection, error) {
 		}
 	}
 
-	new_tasks, totalTime, err := chart_createtime(tasks)
+	new_tasks,totalTime, err := chart_createtime(tasks)
 
 	if err != nil {
 		return RecipeCollection{}, err
 	}
+
+
 
 	// タスクコレクションを生成
 	tasks_collection := RecipeCollection{
@@ -138,7 +132,7 @@ func chart_Register(recipes []Recipe) (RecipeCollection, error) {
 }
 
 // chart_CreateTask は優先度に基づいて横一列のタスクを作成するメソッド
-func chart_CreateTask(recipes []ShortRecipe, priorities []string, recipe_nums []int, task_frame []Task, location int, max_time int, first_task bool) ([]Task, int, int, bool, error) {
+func chart_CreateTask(recipes []ShortRecipe, priorities []string, recipe_nums []int, task_frame []Task, location int, max_time int, frist_task bool) ([]Task, int, int, error) {
 	task_bool := true
 	//順番を前回のタスクにする
 	new_list := priorities[location:]
@@ -154,32 +148,10 @@ func chart_CreateTask(recipes []ShortRecipe, priorities []string, recipe_nums []
 	}
 
 	temp_time := max_time
-	first_time := 0
-
 	for i, priority := range new_list {
-		// current index iをlocationで調整し、recipesの長さで割った余りを取る
 		i += location
 		i %= len(recipes)
-
-		// タスクが有効で、レシピが存在し、時間条件を満たす場合
-		if task_bool && recipe_nums[i] > 0 && (recipes[i].Divide[recipe_nums[i]-1].Time <= max_time || first_task) {
-			// 初回タスクの場合の処理
-			if first_task {
-				// 初めての時間設定
-				if first_time == 0 {
-					first_time = recipes[i].Divide[recipe_nums[i]-1].Time
-					// 既に初回の時間が設定されている場合
-				} else if first_time < recipes[i].Divide[recipe_nums[i]-1].Time {
-					// 時間が初回より長い場合は空を設定
-					task_frame[0].Tejuns[priority] = Tejun{
-						Parallel: true,
-					}
-					continue
-				}
-			}
-
-			log.Print("priority:", priority, "recipe:", recipes[i].Divide[recipe_nums[i]-1].Uid)
-			// タスクフレームにタスクを追加
+		if task_bool && recipe_nums[i] > 0 && (recipes[i].Divide[recipe_nums[i]-1].Time <= max_time || frist_task) {
 			task_frame[0].Tejuns[priority] = Tejun{
 				Id:       recipes[i].Divide[recipe_nums[i]-1].Uid,
 				Name:     string(recipes[i].Divide[recipe_nums[i]-1].Displayname),
@@ -187,37 +159,30 @@ func chart_CreateTask(recipes []ShortRecipe, priorities []string, recipe_nums []
 				Parallel: recipes[i].Divide[recipe_nums[i]-1].Parallel,
 			}
 
-			// 使用したレシピのカウントを減少
 			recipe_nums[i]--
 
-			// 並行処理ができない場合の処理
+			// 並行処理可の場合は、次の手順を追加
 			if !(recipes[i].Divide[recipe_nums[i]].Parallel) {
 				task_bool = false
 				location = i + 1
 				location %= len(recipes)
 			}
 
-			if first_task {
-				temp_time += first_time
-			}
-
-			// 時間制限を超えないように調整
+			//前述までのタスクより時間を越さないため
 			if recipes[i].Divide[recipe_nums[i]].Time > temp_time {
 				temp_time = recipes[i].Divide[recipe_nums[i]].Time
 			}
-
 		} else {
-			// 条件を満たさない場合は並行処理として設定
 			task_frame[0].Tejuns[priority] = Tejun{
 				Parallel: true,
 			}
 		}
+
 	}
 
-	first_task = false
+	frist_task = false
 	max_time = temp_time
-
-	return task_frame, location, max_time, first_task, nil
+	return task_frame, location, max_time, nil
 }
 
 // chart_Extraction はレシピから必要な情報を抽出するメソッド
@@ -279,7 +244,7 @@ func chart_Priority(recipes []ShortRecipe) ([]string, error) {
 }
 
 // chart_createtime はタスクの時間を計算し、各タスクの開始時間を設定するメソッド
-func chart_createtime(tasks []Task) ([]Task, int, error) {
+func chart_createtime(tasks []Task) ([]Task,int, error) {
 	startTime := 0 // 現在の開始時間を保持
 
 	status := false // タスクが追加されたかどうかを示すフラグ
@@ -288,21 +253,21 @@ func chart_createtime(tasks []Task) ([]Task, int, error) {
 
 	totaltime := 0
 
+
 	// 各タスクに対してループ
-	for i, task := range tasks {
+	for i, task := range tasks  { 
 		// 各タスクの手順に対してループ
-		for _, tejun := range task.Tejuns {
+			for _, tejun := range task.Tejuns {
 			// 手順が並行処理不可能であり、次のタスクが存在する場合
 			if !(tejun.Parallel) && i < len(tasks)-1 {
 				startTime += tejun.Time          // 開始時間を更新
-				tasks[i+1].StartTime = startTime // 次のタスクの開始時間を設定
+				tasks[i + 1].StartTime = startTime // 次のタスクの開始時間を設定
 				status = true                    // タスクが追加されたことを示すフラグ
 			}
 
 			if i == len(tasks)-1 && totaltime < tejun.Time {
 				totaltime = tejun.Time
 			}
-
 		}
 
 		// もしタスクが追加された場合
@@ -317,45 +282,17 @@ func chart_createtime(tasks []Task) ([]Task, int, error) {
 			if temptime < tejun.Time { // 最大の手順時間を見つける
 				temptime = tejun.Time
 				startTime += temptime // 開始時間を加算
-				tasks[i+1].StartTime = startTime
+				tasks[i + 1].StartTime = startTime
 			}
 		}
 
 		// 新しいタスクを作成し、手順を設定
 		new_tasks = append(new_tasks, Task{
-			Tejuns: tasks[i].Tejuns, // 次のタスクの手順を設定
+			Tejuns:    tasks[i].Tejuns, // 次のタスクの手順を設定
 		})
 	}
-
+	
 	totaltime += startTime
-
-	for _, task := range tasks {
-		//手順ごとの最大の時間
-		maxtime := 0
-		for _, tejun := range task.Tejuns {
-			if maxtime < tejun.Time {
-				maxtime = tejun.Time
-			}
-		}
-
-		if totaltime < task.StartTime+maxtime {
-			totaltime = task.StartTime + maxtime
-		}
-	}
-
-	return new_tasks, totaltime, nil // 新しいタスクリストを返す
-}
-
-//レシピを順番通りに入れ替えるメソッド
-func chart_prioritys_recepi(simple_recipes []ShortRecipe, prioritys []string) ([]ShortRecipe, error) {
-	recipes := []ShortRecipe{}
-	for i := range prioritys {
-		for _, recipe := range simple_recipes {
-			if  recipe.Uid == prioritys[i] {
-				log.Print(recipe.Uid, prioritys[i])
-				recipes = append(recipes, recipe)
-			}
-		}
-	}
-	return recipes, nil
+	
+	return new_tasks,totaltime, nil // 新しいタスクリストを返す
 }
